# hybrid_gcs

./: .flake8  README.md  gitignore  pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: code-quality.yml  documentation.yml  release.yml  tests.yml
docs/: Hybrid-GCS-Build-Guide.md  Hybrid-GCS-Module-Index.md  Hybrid-GCS-Roadmap.md
examples/: 01_simple_navigation.py  02_rl_training.py
hybrid_gcs/: __init__.py
hybrid_gcs/core/: __init__.py  config_space.py  iris_decomposer.py  micp_solver.py  trajectory.py
hybrid_gcs/training/: __init__.py  curriculum_scheduler.py  experience_buffer.py  policy_network.py  ppo_trainer.py  reward_shaper.py
tests/: __init__.py  conftest.py
tests/test_core/: __init__.py  test_config_space.py  test_trajectory.py
tests/test_training/: test_policy_network.py  test_ppo_trainer.py
